Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.VB

    Public Declare Function C13_CSAdjustResourceInfoIrq Lib "C13W32.DLL" Alias "" (ByVal action As UInt16, ByVal irqinfo As IntPtr, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSAdjustResourceInfoMem Lib "C13W32.DLL" Alias "" (ByVal action As UInt16, ByVal meminfo As IntPtr, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSCall Lib "C13W32.DLL" Alias "" (ByVal func As UInt16, ByRef handle As UInt16, ByVal ptr As IntPtr, ByVal argptr As IntPtr, ByVal arglen As UInt16) As UInt16
    Public Declare Function C13_CSDeregisterClient Lib "C13W32.DLL" Alias "" (ByVal clientinfo As IntPtr) As Int32
    Public Declare Sub C13_CSErrClear Lib "C13W32.DLL" Alias "" ()
    Public Declare Function C13_CSErrGetCode Lib "C13W32.DLL" Alias "" (ByVal index As UInt16) As Int32
    Public Declare Function C13_CSErrGetCount Lib "C13W32.DLL" Alias "" () As UInt16
    Public Declare Sub C13_CSErrInsert Lib "C13W32.DLL" Alias "" (ByVal errval As Int32)
    Public Declare Function C13_CSGetCardServicesInfoStr Lib "C13W32.DLL" Alias "" (ByRef vendorstring As String, ByVal vendorstringlen As UInt16) As Int32
    Public Declare Function C13_CSGetCardServicesInfoVal Lib "C13W32.DLL" Alias "" (ByVal csinfo As IntPtr) As Int32
    Public Declare Function C13_CSGetClientInfo Lib "C13W32.DLL" Alias "" (ByRef namestring As String, ByVal namestringlen As UInt16, ByRef vendorstring As String, ByVal vendorstringlen As UInt16, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSGetClientInfoName Lib "C13W32.DLL" Alias "" (ByRef namestring As String, ByVal namestringlen As UInt16, ByVal clientinfo As IntPtr) As UInt32
    Public Declare Function C13_CSGetClientInfoVendor Lib "C13W32.DLL" Alias "" (ByRef vendorstring As String, ByVal vendorstringlen As UInt16, ByVal clientinfo As IntPtr) As UInt32
    Public Declare Function C13_CSGetConfigurationInfo Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal configinfo As IntPtr, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSGetFirstClient Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal attributes As UInt16, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSGetFirstTuple Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal attributes As UInt16, ByVal desiredtuple As UInt16, ByVal tupleinfo As IntPtr) As UInt16
    Public Declare Function C13_CSGetNextClient Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal attributes As UInt16, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSGetNextTuple Lib "C13W32.DLL" Alias "" (ByVal desiredtuple As UInt16, ByVal tupleinfo As IntPtr) As UInt16
    Public Declare Function C13_CSGetStatus Lib "C13W32.DLL" Alias "" (ByRef cardstate As UInt16, ByRef socketstate As UInt16, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CSGetStatusCard Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As UInt16
    Public Declare Function C13_CSGetStatusSocket Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As UInt16
    Public Declare Function C13_CSGetTupleChan Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As UInt16
    Public Declare Function C13_CSGetTupleCount Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal desiredtuple As UInt16) As UInt16
    Public Declare Function C13_CSGetTupleData Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal tupleoffset As UInt16, ByRef tupledata As Byte, ByVal tupledatalen As UInt16, ByVal tupleinfo As IntPtr) As UInt16
    Public Declare Function C13_CSGetTupleIndex Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal index As UInt16, ByVal desiredtuple As UInt16, ByRef tupledata As Byte, ByVal tupledatalen As UInt16) As UInt16
    Public Declare Function C13_CSGetTupleManuf Lib "C13W32.DLL" Alias "" (ByRef code As UInt16, ByRef info As UInt16, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CSLevel Lib "C13W32.DLL" Alias "" () As UInt16
    Public Declare Function C13_CSMapMemPage Lib "C13W32.DLL" Alias "" (ByVal cardoffset As UInt32, ByVal page As UInt16, ByVal windowinfo As IntPtr) As Int32
    Public Declare Function C13_CSModifyConfiguration Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal configinfo As IntPtr, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSModifyWindow Lib "C13W32.DLL" Alias "" (ByVal attributes As UInt16, ByVal accessspeed As UInt16, ByVal windowinfo As IntPtr) As Int32
    Public Declare Function C13_CSRegisterClient Lib "C13W32.DLL" Alias "" (ByVal attributes As UInt16, ByVal eventvalmask As UInt16, ByVal version As UInt16, ByVal clientinfo As IntPtr, ByVal func As IntPtr, ByVal data As UInt16, ByVal dataptr As IntPtr) As Int32
    Public Declare Function C13_CSReleaseConfiguration Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSReleaseDMA Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal desiredchannel As UInt16, ByVal attributes As Byte, ByVal assignedchannel As Byte, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSReleaseExclusive Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal attributes As UInt16, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSReleaseIO Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal basevalport As UInt16, ByVal numports As UInt16, ByVal attributes As UInt16, ByVal ioaddrlines As UInt16, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSReleaseIRQ Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal attributes As UInt16, ByVal assignedirq As UInt16, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSReleaseWindow Lib "C13W32.DLL" Alias "" (ByVal windowinfo As IntPtr) As Int32
    Public Declare Function C13_CSRequestConfiguration Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal configinfo As IntPtr, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSRequestDMA Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal desiredchannel As UInt16, ByVal attributes As Byte, ByRef assignedchannel As Byte, ByVal clientinfo As IntPtr) As Byte
    Public Declare Function C13_CSRequestExclusive Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal attributes As UInt16, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSRequestIO Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal basevalport As UInt16, ByVal numports As UInt16, ByVal attributes As UInt16, ByVal ioaddrlines As UInt16, ByVal clientinfo As IntPtr) As UInt16
    Public Declare Function C13_CSRequestIRQ Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByRef attributes As UInt16, ByVal irqinfo1 As UInt16, ByVal irqinfo2 As UInt16, ByVal clientinfo As IntPtr) As UInt16
    Public Declare Function C13_CSRequestWindow Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByRef attributes As UInt16, ByRef baseval As UInt32, ByRef size As UInt32, ByVal accessspeed As UInt16, ByVal windowinfo As IntPtr, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSResetCard Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSRevision Lib "C13W32.DLL" Alias "" () As UInt16
    Public Declare Function C13_CSSignature Lib "C13W32.DLL" Alias "" () As UInt16
    Public Declare Function C13_CSSocketCount Lib "C13W32.DLL" Alias "" () As UInt16
    Public Declare Function C13_CSValidateCIS Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As UInt16
    Public Declare Function C13_CSVendorString Lib "C13W32.DLL" Alias "" (ByRef buf As String, ByVal bufsize As UInt16) As UInt32
    Public Declare Sub C13_DARClear Lib "C13W32.DLL" Alias "_C13_DARClear@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C13_DARGet Lib "C13W32.DLL" Alias "_C13_DARGet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_DARRdL Lib "C13W32.DLL" Alias "_C13_DARRdL@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_DARRdW Lib "C13W32.DLL" Alias "_C13_DARRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_DARSet Lib "C13W32.DLL" Alias "_C13_DARSet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C13_DARWrL Lib "C13W32.DLL" Alias "_C13_DARWrL@12" (ByVal value As UInt32, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C13_DARWrW Lib "C13W32.DLL" Alias "_C13_DARWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C13_DescAddr Lib "C13W32.DLL" Alias "_C13_DescAddr@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_DescAlloc Lib "C13W32.DLL" Alias "_C13_DescAlloc@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_DescConfig Lib "C13W32.DLL" Alias "_C13_DescConfig@24" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_DescOptRd Lib "C13W32.DLL" Alias "_C13_DescOptRd@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_DescOptWr Lib "C13W32.DLL" Alias "_C13_DescOptWr@24" (ByVal descopt As UInt16, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32)
    Public Declare Function C13_DescPtrRd Lib "C13W32.DLL" Alias "_C13_DescPtrRd@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_DescPtrWr Lib "C13W32.DLL" Alias "_C13_DescPtrWr@24" (ByVal msgaddr As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_DescRd Lib "C13W32.DLL" Alias "_C13_DescRd@24" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByRef desc As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_DescWr Lib "C13W32.DLL" Alias "_C13_DescWr@24" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByRef desc As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_Div Lib "C13W32.DLL" Alias "_C13_Div@8" (ByVal diva As UInt32, ByVal divb As UInt32) As UInt32
    Public Declare Function C13_DllUsageCount Lib "C13W32.DLL" Alias "_C13_DllUsageCount@0" () As Int32
    Public Declare Function C13_DspBioClear Lib "C13W32.DLL" Alias "_C13_DspBioClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_DspBioRd Lib "C13W32.DLL" Alias "_C13_DspBioRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_DspBioSet Lib "C13W32.DLL" Alias "_C13_DspBioSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_DspIntfClear Lib "C13W32.DLL" Alias "_C13_DspIntfClear@8" (ByVal intmask As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_DspIntfRd Lib "C13W32.DLL" Alias "_C13_DspIntfRd@8" (ByVal intmask As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_DspIntmClear Lib "C13W32.DLL" Alias "_C13_DspIntmClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_DspIntmSet Lib "C13W32.DLL" Alias "_C13_DspIntmSet@4" (ByVal handleval As UInt32) As Int32
